cliqz@cliqz.com/chrome/skin/browser.css
#PopupAutoCompleteRichResult {
  -moz-binding: url("chrome://cliqz/content/components.xml?v=0.4.16#autocomplete-rich-result-popup-cliqz");
}

/* suggestions */

#cliqz-suggestion-box {
    background-color: #dddddd;
    height: 20px;
    padding: 5px;
    overflow: hidden;
    line-height: 20px;
}

.cliqz-suggestion {
    padding: 1px 5px 2px 5px;
}

.cliqz-suggestion:hover, .cliqz-suggestion-default {
    background-color: #eeeeee;
    cursor: pointer;
}

.cliqz-suggestion-text {
    margin: 0px;
    padding: 0px;
}

.cliqz-suggestion-extra {
    margin: 0px;
    padding: 0px;
    font-weight: 600;
}

/* end suggestions */

/* footer */
#cliqz-footer {
    padding: 5px 10px;
    background: url(chrome://cliqzres/content/skin/drag_icon.png) no-repeat 50% 50%;
    background-color: #eeeeee;
    background-size: 20px 14px;
    position: relative;
    line-height: 16px;
}

#cliqz-navigation-message {
    font-style: italic;
    color: #999999;
}

.cliqz-footer-engines:hover #cliqz-engines-box {
    max-width: 260px;
}

.cliqz-footer-engines:hover .cliqz-engines-text,
#cliqz-engines-box:hover .cliqz-engines-text {
    opacity: 0;
}

#cliqz-engines-box {
    background-color: #eeeeee;
    float:right;
    overflow: hidden;
    white-space: nowrap;
    max-width: 0px;
    transition: all linear 0.8s ;
    z-index: 1;
    position: absolute;
    right: 10px;
}

.cliqz-engines-text {
    transition: all linear 0.5s;
    color: #333333;
    position: absolute;
    z-index: 0;
    right: 10px;
}

.cliqz-engine {
    cursor: pointer;
}

/* footer */

/* results */

#cliqz-results {
    height: 300px;
    overflow-y: scroll;
}

/*
#cliqz-results * {
    border:1px solid black;
}
*/
.cliqz-result-left-box {
    width: 30px;
    text-align: center;
}

.cliqz-image {
    position: relative;
    margin-right: 10px;
    width: 96px; /* 16 */
    height: 54px; /* 9 */
    background-size: contain;
    background-position: center center;
    background-repeat: no-repeat;
}

.cliqz-image>p {
    position: absolute;
    right: 0px;
    bottom: -12px;
    background-color: rgba(0, 0, 0, 0.6);
    font-weight: bold;
    font-size: 9pt;
    color: white;
    padding: 2px 5px 2px 5px;
}

.cliqz-result-mid-box {
    overflow: hidden;
}

.cliqz-result-right-box {
}

.cliqz-result-title-box {
    font-size: 12pt;
    font-weight: 500;
}

.cliqz-result-url-box {
    font-size: 9pt;
    font-weight: 400;
}

.cliqz-result-url-host {
    color: #006666;
}

.cliqz-result-url-path {
    color: #cccccc;
}

.cliqz-result-url-ssl {
    padding-left: 13px;
    background: url(chrome://cliqzres/content/skin/lock_light.png) no-repeat 2px center;
}

.cliqz-result-type {
    height: 9px;
    width: 9px;
    border-radius: 50%;
    display: inline-block;
}

.cliqz-result-item-box {
    border-bottom: 1px solid #CCC;
}

.cliqz-result-item-box[type^="cliqz-results sources-"] .cliqz-result-type {
    background-color: #3399ff;
}

.cliqz-result-item-box[type="favicon"] .cliqz-result-type,
.cliqz-result-item-box[type="action favicon"] .cliqz-result-type {
    background-color: #cccccc;
    opacity: 0.5;
}

.cliqz-result-item-box[type="bookmark"] .cliqz-result-type,
.cliqz-result-item-box[type="action bookmark"] .cliqz-result-type,
.cliqz-result-item-box[type="tag"] .cliqz-result-type,
.cliqz-result-item-box[type="action tag"] .cliqz-result-type {
    background-color: #FFCC00;
}

.cliqz-result-item-box[selected="true"] {
    background-color: #eefafe;
}

.cliqz-result-generic {
   padding: 10px 0;
}

.cliqz-logo {
    height: 36px;
    width: 36px;
    background-repeat: no-repeat;
    background-position: center center;
    background-size: 36px 36px;
}

.cliqz-result-item-box:hover .cliqz-logo {
  background: url(chrome://cliqzres/content/skin/popout_icon.png) no-repeat center center;
}

.cliqz-result-description {
    max-height: 2.5em;
    padding-right: 10px;
}

/* end results */

.cliqz-urlbar-Last-search {
    background: url(chrome://cliqzres/content/skin/rabbit_arrow.png) no-repeat 5px center;
    background-size: 14px 10px;
    color: white;
    background-color: grey;
    margin: 0px;
    padding: 2px 6px 2px 24px;
    border-radius: 1px;
    max-width: 200px;
    text-overflow: ellipsis;
    overflow: hidden;
}

/* weather */
.cliqz-weather-left-box {
    padding-top: 10px;
    margin-right: 20px;
    max-width: 150px;
    float: left;
}

.cliqz-weather-city {
    background-color: grey;
    font-size: 14px;
    font-weight: bold;
    color: white;
    padding: 5px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

.cliqz-weather-status {
    color: grey;
    padding: 5px;
}

.cliqz-weather-today-container {
    margin-top: 10px;
    width: 200px;
    float: left;
}

.cliqz-weather-skew-container {
    transform: skew(-30deg);
    background-color:#efefef;
    margin-right:10px;
    padding: 0px 20px;
    float: right;
}


.cliqz-weather-credits {
    font-size: 9px;
    color: lightgrey;
    text-align:right;
    float: right;
    margin: 66px 5px 0 0;
}

.cliqz-weather-today-date {
    font-size: 11px;
    padding: 2px;
    color: grey;
}

.cliqz-weather-today-temp {
    font-size: 32px;
    color: black;
    background-repeat: no-repeat;
    background-position: 20px 0px;
    padding-left: 87px;
    height: 50px;
    line-height: 52px;
}

.cliqz-weather-today-min {
  font-size: 11px;
  color: #4785ec;
  padding: 2px;
}

.cliqz-weather-today-max {
    font-size: 11px;
    color: #fd5b5b;
    padding: 2px;
}

.cliqz-weather-today-icon {
    height: 50px;
}

.cliqz-weather-next-icon {
    height: 50px;
    margin: 0px 20px 0 15px;
}

.cliqz-weather-next-container {
    padding: 10px;
    margin: 0px 10px;
}


.cliqz-weather-next-day {
    color: black;
    font-size: 14px;
}

.cliqz-weather-next-date {
    color: gray;
    font-size: 13px;
    padding-top: 7px;
}

.cliqz-weather-next-max {
    font-size: 12px;
    color: #fd5b5b;
}

.cliqz-weather-next-min {
    font-size: 12px;
    color: #4785ec;
    padding-top: 7px;
}

.cliqz-weather-next-desc {
    color: #777;
}

@media (max-width: 1200px) {
  .cliqz-weather-aTomorrow {
    display: none;
  }
}

@media (max-width: 1000px) {
  .cliqz-weather-tomorrow {
    display: none;
  }
}

@media (max-width: 800px) {
  .cliqz-weather-credits {
    display: none;
  }
}

/* end weather */

/* news */
.cliqz-news-ago-line {
    color: red;
    font-weight: bold;
}

.cliqz-news-sources {
    background: #f3f3f3;
    padding: 5px 0 5px 35px;
    max-height: 62px;
    overflow: hidden;
}

.cliqz-news-source-title-with-logo {
    font-size: 8pt;
    color: #333333;
    width: 300px;
    overflow: hidden;
    height: 26px;
    font-weight: bold;
    background-repeat: no-repeat;
    background-position: left 2px;
    padding-left: 30px;
    background-size: 24px 24px;
    cursor: pointer;
    display: inline-block;
    margin: 2px 0;
}

.cliqz-news-source {
    overflow: hidden;
    margin: 2px 2px 2px 0px;
}
/* end news */

/* hq */
.cliqz-hq-language {
    color: gray;
    font-weight: bold;
}


.cliqz-hq-links {
    max-height: 1.3em;
    overflow: hidden;
}

.cliqz-hq-link {
    font-size: 9pt;
    color: #00F;
    float: left;
    font-weight: bold;
    padding-right: 15px;
    cursor: pointer;
}

/* end hq */

/* qaa */
.cliqz-qaa-sources-headline {
    text-align: center;
    color: red;
    font-size: 11px;
    font-weight: bold;
    padding-bottom: 5px;
}
.cliqz-qaa-sources {
    background: #f3f3f3;
    padding: 5px 0 5px 35px;
}

.cliqz-qaa-source-title-with-logo {
    font-size: 8pt;
    color: #333333;
    width: 300px;
    overflow: hidden;
    height: 26px;
    font-weight: bold;
    background-repeat: no-repeat;
    background-position: left 2px;
    padding-left: 30px;
    background-size: 24px 24px;
    cursor: pointer;
    display: inline-block;
    margin: 2px 0;
}

.cliqz-qaa-answer {
    color: gray;
}

.cliqz-qaa-answer-value {
    color: red;
}

.cliqz-qaa-accepted {
    color: green;
}
.cliqz-qaa-accepted:before {
    content: '\2713';
    display: inline-block;
    color: green;
    padding: 0 6px 0 0;
}

.cliqz-qaa-declined {
    color: red;
}

.cliqz-qaa-declined:before {
    content: '\2716';
    display: inline-block;
    color: red;
    padding: 0 6px 0 0;
}

.cliqz-qaa-posted {

}

.cliqz-qaa-posted-value {
    color: gray;
}

/* end qaa */

/* people */
.people-box {
    font-size: 9pt;
}

.cliqz-people-image-box {
    width: 64px;
    height: 64px;
}

.cliqz-people-source {
    width: 18px;
    height: 18px;
    background-color: white;
    background-size: cover;
    margin-left: -12px;
    position: relative;
    top: -12px;
    border: 2px solid white;
}

.cliqz-people-image {
    background-color: white;
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center center;
    width: 54px;
    height: 54px;
    border: 2px solid #00659c;
}

.cliqz-people-name {
  font-weight: bold;
  color: #222222
}

.cliqz-people-company {
  font-weight: bold;
  color: black;
}

.cliqz-people-jobtitle{
  color: #00659c;
  font-weight: bold;
}

.cliqz-people-agoline {
  color: #cccccc;
  padding-left: 3pt;
}

.cliqz-people-branch {
  color: #cccccc;
}

/* end people */

/* shopping */

.cliqz-shopping-result-price {
  font-size: 9pt;
  font-weight: 600;
  color: #aa2222;
}

.cliqz-shopping-result-stars-box, .cliqz-shopping-result-stars {
  float: left;
  background: url(chrome://cliqzres/content/skin/stars.png) 0 -14px repeat-x;
  width: 70px;
  height: 14px;
}

.cliqz-shopping-result-stars-box .cliqz-shopping-result-stars {
  background-position: 0 0;
}

.cliqz-shopping-result-reviews {
  display: inline;
  margin-left: 5px;
  color: #444444;
}

/* end shopping */

/* video */

.cliqz-result-video-views {
  height: 18px;
  vertical-align: middle;
}

.cliqz-result-video-provider {
  font-size: 14px;
  color: #006666;
}

.cliqz-result-video-author {
  font-size: 12px;
  color: #999999;
  padding: 2px 0;
}

.cliqz-result-video-duration {
  background: #000000;
  color: #ffffff;
  width: 55px;
  padding: 2px 0;
  margin-top: 2px;
}

.cliqz-result-video-play-arrow {
  font-size: 0.7em;
  vertical-align: middle;
  padding: 0 5px;
}

/* end video */

/* misc */
.cliqz-inline-box-children>* {
    display: inline-block;
    vertical-align: middle;
}

em {
    font-style:normal;
    font-weight: bold;
}

.hidden {
    visibility: hidden;
    display: none !important;
}

.overflow {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    padding-right: 10px;
}

